--- a/tech-test/src/app/app.component.html
+++ b/tech-test/src/app/app.component.html
@@ -1,4 +1,9 @@
-<h1 class="title-text">Welcome to Origin's Angular Technical Test: {{title}}</h1>
+<div class="app-wrapper">
+  <div class="app-content">
+    <h1 class="title-text">Welcome to Origin's Angular Technical Test: {{title}}</h1>
 
-<router-outlet></router-outlet>
+    <mat-spinner class="app-loader" *ngIf="loading"></mat-spinner>
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
