--- a/tech-test/src/app/app.component.scss
+++ b/tech-test/src/app/app.component.scss
@@ -5,3 +5,20 @@
   font-weight: 600;
   font-family: 'ProximaNova', sans-serif;
 }
+
+.app-wrapper {;
+  display: flex;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+
+.app-content {
+  width: 900px;
+  margin: 40px 0;
+}
+
+.app-loader {
+  margin: 0 auto;
+}
