--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.html
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.html
@@ -1,1 +1,10 @@
-<p>todo-list works!</p>
+<div class="todo-list" *ngIf="todos$ | async as todos">
+  <mat-card class="todo-card" *ngFor="let todo of todos">
+    <mat-card-title>{{todo.label}}</mat-card-title>
+    <mat-card-subtitle>{{todo.category}}</mat-card-subtitle>
+    <mat-card-actions>
+      <button mat-button>DELETE</button>
+      <button mat-button>EDIT</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
