removing items from todo list has been added

--- a/tech-test/src/app/app.component.scss
+++ b/tech-test/src/app/app.component.scss
@@ -12,11 +12,13 @@
   width: 100%;
   height: 100%;
   justify-content: center;
+
 }
 
 .app-content {
-  width: 900px;
-  margin: 40px 0;
+  width: 800px;
+  padding: 40px 20px;
+  background: #f6f6f6;
 }
 
 .app-loader {
