--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.html
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.html
@@ -2,9 +2,12 @@
   <mat-card class="todo-card" *ngFor="let todo of todos">
     <mat-card-title>{{todo.label}}</mat-card-title>
     <mat-card-subtitle>{{todo.category}}</mat-card-subtitle>
+    <mat-card-content>
+      {{todo.description}}
+    </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="deleteTodo(todo.id)">DELETE</button>
-      <button mat-button>EDIT</button>
+      <button mat-button (click)="deleteTodo(todo.id)"><mat-icon>delete</mat-icon></button>
+      <button mat-button><mat-icon>edit</mat-icon></button>
     </mat-card-actions>
   </mat-card>
 </div>
