toolbar has been added

--- a/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
+++ b/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
@@ -25,6 +25,6 @@
 </form>
 
 <div class="actions">
-  <button class="actions__button" mat-raised-button>Cancel</button>
+  <button class="actions__button" mat-raised-button routerLink="/todo">Cancel</button>
   <button class="actions__button" mat-raised-button color="primary">{{id ? 'Update' : 'Create'}}</button>
 </div>
