--- a/tech-test/src/app/app.component.html
+++ b/tech-test/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar class="toolbar" color="primary">
+  <span class="toolbar__name" routerLink="/todo">Todo App</span>
+</mat-toolbar>
+
 <div class="app-wrapper">
   <div class="app-content">
     <mat-spinner class="app-loader" *ngIf="loading"></mat-spinner>
