--- a/tech-test/src/app/app.component.scss
+++ b/tech-test/src/app/app.component.scss
@@ -1,9 +1,7 @@
-.title-text{
-  font-size: 20px;
-  line-height: 1.5;
-  color: #20364b;
-  font-weight: 600;
-  font-family: 'ProximaNova', sans-serif;
+.toolbar {
+  &__name {
+    cursor: pointer;
+  }
 }
 
 .app-wrapper {;
@@ -12,13 +10,14 @@
   width: 100%;
   height: 100%;
   justify-content: center;
-
+  background: #f6f6f6;
 }
 
 .app-content {
   width: 800px;
+  margin-top: 20px;
   padding: 40px 20px;
-  background: #f6f6f6;
+  background: #fff;
 }
 
 .app-loader {
