--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.html
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.html
@@ -17,7 +17,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-button (click)="deleteTodo(todo.id)"><mat-icon>delete</mat-icon></button>
-      <button mat-button><mat-icon>edit</mat-icon></button>
+      <button mat-button color="primary"><mat-icon>edit</mat-icon></button>
     </mat-card-actions>
   </mat-card>
 </div>
