--- a/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
+++ b/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
@@ -7,7 +7,7 @@
 
 <form class="todo-form" [formGroup]="todoForm">
   <mat-form-field class="field" appearance="fill">
-    <mat-label>Title</mat-label>
+    <mat-label>Title*</mat-label>
     <input matInput type="text" formControlName="label" autocomplete="off">
   </mat-form-field>
 
@@ -17,8 +17,8 @@
   </mat-form-field>
 
   <mat-form-field class="field" appearance="fill">
-    <mat-label>Description</mat-label>
-    <textarea matInput type="text" formControlName="category" autocomplete="off"></textarea>
+    <mat-label>Description*</mat-label>
+    <textarea matInput type="text" formControlName="description" autocomplete="off"></textarea>
   </mat-form-field>
 
   <mat-checkbox class="field" formControlName="done">Completed</mat-checkbox>
@@ -26,5 +26,5 @@
 
 <div class="actions">
   <button class="actions__button" mat-raised-button routerLink="/todo">Cancel</button>
-  <button class="actions__button" mat-raised-button color="primary">{{id ? 'Update' : 'Create'}}</button>
+  <button class="actions__button" mat-raised-button color="primary" (click)="submit()">{{id ? 'Update' : 'Create'}}</button>
 </div>
