--- a/tech-test/src/app/app.component.scss
+++ b/tech-test/src/app/app.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 64px);
   justify-content: center;
   background: #f6f6f6;
 }
