--- a/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
+++ b/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
@@ -1,30 +1,34 @@
-<header class="todo_header">
-  <div class="todo-header__content">
-    <h1>{{id ? 'Editing Todo' : 'Creating Todo'}}</h1>
+<ng-container *ngIf="todo$ | async as todo">
+  <header class="todo_header">
+    <div class="todo-header__content">
+      <h1>{{todo.id ? 'Editing "' + todo.label + '"' : 'Creating Todo'}}</h1>
+    </div>
+    <mat-divider></mat-divider>
+  </header>
+
+  <form class="todo-form" [formGroup]="todoForm">
+    <mat-form-field class="field" appearance="fill">
+      <mat-label>Title*</mat-label>
+      <input matInput type="text" formControlName="label" autocomplete="off">
+    </mat-form-field>
+
+    <mat-form-field class="field" appearance="fill">
+      <mat-label>Category</mat-label>
+      <input matInput type="text" formControlName="category" autocomplete="off">
+    </mat-form-field>
+
+    <mat-form-field class="field" appearance="fill">
+      <mat-label>Description*</mat-label>
+      <textarea matInput type="text" formControlName="description" autocomplete="off"></textarea>
+    </mat-form-field>
+
+    <mat-checkbox class="field" formControlName="done">Completed</mat-checkbox>
+  </form>
+
+  <div class="actions">
+    <button class="actions__button" mat-raised-button routerLink="/todo">Cancel</button>
+    <button class="actions__button" mat-raised-button color="primary" (click)="submit(todo.id)">
+      {{todo.id ? 'Update' : 'Create'}}
+    </button>
   </div>
-  <mat-divider></mat-divider>
-</header>
-
-<form class="todo-form" [formGroup]="todoForm">
-  <mat-form-field class="field" appearance="fill">
-    <mat-label>Title*</mat-label>
-    <input matInput type="text" formControlName="label" autocomplete="off">
-  </mat-form-field>
-
-  <mat-form-field class="field" appearance="fill">
-    <mat-label>Category</mat-label>
-    <input matInput type="text" formControlName="category" autocomplete="off">
-  </mat-form-field>
-
-  <mat-form-field class="field" appearance="fill">
-    <mat-label>Description*</mat-label>
-    <textarea matInput type="text" formControlName="description" autocomplete="off"></textarea>
-  </mat-form-field>
-
-  <mat-checkbox class="field" formControlName="done">Completed</mat-checkbox>
-</form>
-
-<div class="actions">
-  <button class="actions__button" mat-raised-button routerLink="/todo">Cancel</button>
-  <button class="actions__button" mat-raised-button color="primary" (click)="submit()">{{id ? 'Update' : 'Create'}}</button>
-</div>
+</ng-container>
