--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.html
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.html
@@ -10,14 +10,27 @@
 
 <div class="todo-list" *ngIf="todos$ | async as todos">
   <mat-card class="todo-card" *ngFor="let todo of todos">
-    <mat-card-title>{{todo.label}}</mat-card-title>
+    <mat-card-title class="todo-card__title">
+      <mat-checkbox class="todo-card__checkbox" color="primary"
+                    [checked]="todo.done" *ngIf="!todo.done" matTooltip="Complete"></mat-checkbox>
+      <mat-icon *ngIf="todo.done" matTooltip="Completed" color="primary">done</mat-icon>
+      <span [class.todo-card__completed-label]="todo.done">{{todo.label}}</span>
+    </mat-card-title>
     <mat-card-subtitle>{{todo.category}}</mat-card-subtitle>
     <mat-card-content>
       {{todo.description}}
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button (click)="deleteTodo(todo.id)"><mat-icon>delete</mat-icon></button>
-      <button mat-button color="primary" [routerLink]="['/todo/edit', todo.id]"><mat-icon>edit</mat-icon></button>
+
+    <mat-card-actions class="todo-card__actions">
+      <button mat-button color="disabled" (click)="deleteTodo(todo.id)" matTooltip="Delete">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-button color="primary" [routerLink]="['/todo/edit', todo.id]" matTooltip="Edit">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button class="todo-card__btn" mat-button color="primary" matTooltip="Mark uncompleted" *ngIf="todo.done">
+        <mat-icon>replay</mat-icon>
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
