--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.scss
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.scss
@@ -15,6 +15,33 @@
 
 .todo-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
+}
+
+.todo-card {
+  &__title {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    animation: all 0.3ms;
+  }
+
+  &__actions {
+    display: flex;
+    width: 100%;
+  }
+
+  &__completed-label {
+    text-decoration-line: line-through;
+  }
+
+  &__btn.mat-button {
+    margin-left: auto;
+  }
+
+  ::ng-deep &__checkbox .mat-checkbox-inner-container {
+    width: 18px;
+    height: 18px;
+    margin: auto 0;
+  }
 }
