competing todoItems has been added

--- a/tech-test/src/app/app.component.html
+++ b/tech-test/src/app/app.component.html
@@ -3,9 +3,9 @@
 </mat-toolbar>
 
 <div class="app-wrapper">
-  <div class="app-content">
+  <mat-card class="app-content">
     <mat-spinner class="app-loader" *ngIf="loading"></mat-spinner>
     <router-outlet></router-outlet>
-  </div>
+  </mat-card>
 </div>
 
