--- a/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
+++ b/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
@@ -22,7 +22,7 @@
       <textarea matInput type="text" formControlName="description" autocomplete="off"></textarea>
     </mat-form-field>
 
-    <mat-checkbox class="field" formControlName="done">Completed</mat-checkbox>
+    <mat-checkbox class="field" formControlName="done" color="primary">Completed</mat-checkbox>
   </form>
 
   <div class="actions">
