--- a/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
+++ b/tech-test/src/app/todo/components/todo-edit/todo-edit.component.html
@@ -26,8 +26,10 @@
   </form>
 
   <div class="actions">
-    <button class="actions__button" mat-raised-button routerLink="/todo">Cancel</button>
-    <button class="actions__button" mat-raised-button color="primary" (click)="submit(todo.id)">
+    <button class="actions__button" mat-raised-button routerLink="/todo"
+            [disabled]="!!(todoLoading$ | async)">Cancel</button>
+    <button class="actions__button" mat-raised-button color="primary" (click)="submit(todo.id)"
+            [disabled]="!!(todoLoading$ | async)">
       {{todo.id ? 'Update' : 'Create'}}
     </button>
   </div>
