--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.scss
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.scss
@@ -3,14 +3,45 @@
 
   &__content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+  }
+
+  &__actions {
+    margin-left: auto;
+    display: flex;
+    gap: 20px;
   }
 
   &__action {
     position: relative;
     top: 25px;
     z-index: 1;
+  }
+}
+
+.filters {
+  width: 100%;
+  margin-bottom: 40px;
+
+  &__field {
+    width: 90%;
+  }
+
+  &__button {
+    width: 100px;
+  }
+
+  &__search {
+    height: 52px;
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  &__radio-filter {
+    display: flex;
+    gap: 10px;
   }
 }
 
