navigation tests have been added to the todo list

--- a/tech-test/src/app/todo/components/todo-list/todo-list.component.html
+++ b/tech-test/src/app/todo/components/todo-list/todo-list.component.html
@@ -8,7 +8,8 @@
               data-testid="filters-switch-btn">
         <mat-icon>filter_list</mat-icon>
       </button>
-      <button class="todo-header__action" mat-fab color="primary" routerLink="create" matTooltip="Create Todo">
+      <button class="todo-header__action" mat-fab color="primary" routerLink="create" matTooltip="Create Todo"
+              data-testid="todo-add-btn">
         <mat-icon>add</mat-icon>
       </button>
     </div>
