--- a/tech-test/src/app/todo/components/todo-filters/todo-filters.component.scss
+++ b/tech-test/src/app/todo/components/todo-filters/todo-filters.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/mixins';
+
 .filters {
   width: 100%;
   margin-bottom: 40px;
@@ -21,6 +23,14 @@
   &__radio-filter {
     display: flex;
     gap: 10px;
+
+    @include xs {
+      flex-direction: column;
+    }
+
+    @include md {
+      flex-direction: row;
+    }
   }
 
   &__reset {
